Change desgin... needs more effort

--- a/src/assets/styles/Variables.scss
+++ b/src/assets/styles/Variables.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700,900&display=swap");
 
 $primary-color: #003366;
-$accent-color: #1b998b;
+$accent-color: #d3bfb6;
 $text-color: #fff;
 $font-weights: (
   "regular": 400,
