--- a/src/components/layout/NavbarStyle.scss
+++ b/src/components/layout/NavbarStyle.scss
@@ -58,7 +58,7 @@ $font-weights: (
       padding: 0 10px;
 
       &:hover {
-        background-color: $primary-color;
+        background-color: $accent-color;
       }
     }
 
