--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:200,300,400,500,600,700,800,900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700,900&display=swap");
 
-$primary-color: #003366;
-$accent-color: #1b998b;
+$primary-color: #fff;
+$accent-color: #d3bfb6;
 $text-color: #fff;
 $font-weights: (
   "regular": 400,
