--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:200,300,400,500,600,700,800,900&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700,900&display=swap");
-
-$primary-color: #fff;
-$accent-color: #d3bfb6;
-$text-color: #fff;
-$font-weights: (
-  "regular": 400,
-  "medium": 500,
-  "bold": 700
-);
+@import './assets/styles/variables';
 
 * {
   margin: 0;
@@ -25,7 +15,7 @@ $font-weights: (
 
 html,
 body {
-  background: $primary-color;
+  background: '$primary-color';
   font-weight: map-get($map: $font-weights, $key: bold);
   font-family: "Roboto Slab", serif;
   color: black;
