--- a/src/App.scss
+++ b/src/App.scss
@@ -15,9 +15,9 @@
 
 html,
 body {
-  background: '$primary-color';
+  background: $primary-color;
   font-weight: map-get($map: $font-weights, $key: bold);
-  font-family: "Roboto Slab", serif;
+  font-family: 'Source Sans Pro', sans-serif;
   color: black;
   width: 100%;
   min-height: 100vh;
