--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -6,8 +6,8 @@
 
 
 
-$primary-color:  #0097A7;
-// #003366; #00796B;
+$primary-color:  #fbab9d;
+// #003366; #00796B; #0097A7 #cec857;
 $accent-color: #FF9800;
 $text-color: black;
 $font-weights: (
