--- a/src/components/pages/Pages.scss
+++ b/src/components/pages/Pages.scss
@@ -3,7 +3,7 @@
 .home-container {
   padding : 50px;
   width : 70vw;
-  height: 70wh; 
+  height: calc(100%-80px); 
   margin-left: auto;
   margin-Right : auto;
 }
