--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -1,5 +1,129 @@
 @import '../assets/styles/variables';
 
+
+//Events
+
+.event-category-container {
+    height : 100vh;
+    background : #fbab9d;
+}
+
+.event-category-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+// Places
+
+.categories-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+a {
+    text-decoration: none !important;
+}
+
+.categoryItem {
+    position: relative;
+    text-align: center;
+    text-align: justify;
+    margin: 20px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+
+    img {
+        padding-top: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
+        opacity: 1;
+        width: calc(100% - 20px);
+        height: 100%; 
+        border-radius: 20px;
+    }
+
+    h1 {
+        text-decoration: none;
+        color: black;
+        // position: absolute;
+        // top: -800%;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 40px;
+        font-size: 25px; 
+        font-weight: map-get($map: $font-weights, $key: light);
+    }
+}
+
+.category-container {
+    background: #fbab9d;
+    display: block;
+    // border: solid #fbab9d;
+}
+
+.map-container {
+    background : white;
+    padding: 10px;
+    height: 450px;
+    max-width: 992px;
+    width: 100%;
+    margin-left : auto;
+    margin-right : auto;
+    margin-top : 50px;
+}
+
+.category-grid {
+    display: grid;
+    padding: 10px;
+    grid-template-columns: 1fr 1fr;
+    max-width: 992px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background: white;
+
+    img {
+        padding: 10px;
+        opacity: 0.5;
+        width: calc(100% - 20px);
+        height: 30vh; 
+        flex: 1;
+        resize: contain;
+        border : 50px;
+    }
+
+    p {
+        padding: 30px;
+        font-weight: map-get($map: $font-weights, $key: medium);
+        font-family: 'Source Sans Pro', sans-serif;
+        color : Black;
+        position: absolute;
+        top: 45%;
+        left: 10%;
+    }
+
+    .placeItem {
+        position: relative;
+        margin: 20px;
+        background-color: white;
+        border-radius: 10px;
+        box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+        img {
+            border : 50px;
+        }
+
+        &:hover {
+            img {
+              opacity: 1;
+            }
+        } 
+    }
+}
+
 .detail-container {
     margin-top: 50px;
     width : 50vw;
@@ -19,9 +143,9 @@
 
     p {
         font-weight: map-get($map: $font-weights, $key: medium);
-        font-family: 'Source Sans Pro', sans-serif;
         color: black;
         margin: 2vw;
         font-size: 30px;
     }
 }
+
