Persist data on refresh page/with url

--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -34,6 +34,7 @@ a {
     margin: 20px;
     background-color: whitesmoke;
     border-radius: 10px;
+    border: solid #00C853;
 
     img {
         padding-top: 10px;
@@ -61,7 +62,7 @@ a {
 .category-container {
     background: #fbab9d;
     display: block;
-    // border: solid #fbab9d;
+    // border: solid #69F0AE;
 }
 
 .map-container {
