--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -84,7 +84,7 @@ a {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    background: white;
+    // background: white;
 
     img {
         padding: 10px;
