Add Image Slide in Details page

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
 html,
 body {
   background: #fbab9d;
-  //#e7a898;
+  //#e7a898; #fbab9d;
   font-weight: map-get($map: $font-weights, $key: bold);
   font-family: 'Source Sans Pro', sans-serif;
   color: black;
