--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -34,7 +34,7 @@ a {
     margin: 20px;
     background-color: whitesmoke;
     border-radius: 10px;
-    border: solid #00C853;
+    // border: solid #00C853;
 
     img {
         padding-top: 10px;
@@ -140,11 +140,8 @@ a {
     border-radius: 5px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
-    img {
-        width : 100%;
-        height : 50%;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
+    .slide-container {
+        width: 100%;
     }
 
     p {
@@ -155,3 +152,9 @@ a {
     }
 }
 
+.each-slide img {
+        width : 100%;
+        height : 40vh;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+}
