--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -144,6 +144,13 @@ a {
         width: 100%;
     }
 
+    img {
+        width : 100%;
+        height : 40vh;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+
     p {
         font-weight: map-get($map: $font-weights, $key: medium);
         color: black;
