--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -3,6 +3,8 @@
 @import url("https://fonts.googleapis.com/css?family=Titillium+Web:300,400,700,900&display=swap");
 //'Source Sans Pro', sans-serif;
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700&display=swap');
+@import '../../../node_modules/include-media/src/config';
+@import '../../../node_modules/include-media/src/media';
 
 
 
@@ -17,3 +19,7 @@ $font-weights: (
   "semi-bold" : 600,
   "bold": 700
 );
+
+$breakpoints: (phone: 640px, 
+               tablet: 768px, 
+               desktop: 1024px) !default;
