--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -11,7 +11,7 @@
 .event-category-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 80%;
+    width: 80vw;
     margin-left: auto;
     margin-right: auto;
 }
@@ -21,6 +21,12 @@
 .categories-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+
+    @media (max-width: 480px) {
+        width : 95vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 a {
