--- a/src/components/pages/Pages.scss
+++ b/src/components/pages/Pages.scss
@@ -2,6 +2,7 @@
 
 .home-container {
   padding : 2vw;
+  padding-top: 5%;
   height: calc(100%-80px); 
   margin-left: auto;
   margin-Right : auto;
