--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -37,7 +37,7 @@ a {
     position: relative;
     text-align: center;
     text-align: justify;
-    margin: 20px;
+    margin: 1vw;
     background-color: whitesmoke;
     border-radius: 10px;
     // border: solid #00C853;
@@ -48,7 +48,7 @@ a {
         padding-right: 10px;
         opacity: 1;
         width: calc(100% - 20px);
-        height: 100%; 
+        height: 70%; 
         border-radius: 20px;
     }
 
