--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -14,6 +14,7 @@
     width: 80vw;
     margin-left: auto;
     margin-right: auto;
+    
 }
 
 // Places
@@ -72,14 +73,28 @@ a {
 }
 
 .map-container {
-    background : white;
-    padding: 10px;
-    height: 450px;
+    // background : white;
+    // padding: 10px;
+    height: 60%;
     max-width: 992px;
-    width: 100%;
+    width: calc(100%-20px);
     margin-left : auto;
     margin-right : auto;
     margin-top : 50px;
+    display : block;
+
+    @media (max-width: 480px) {
+        width: 90vw;
+        height: 60%;
+        min-height: 380px;
+        margin: 5px;
+    }
+
+    #map {
+        @media (max-width: 480px) {
+            padding: 0px;
+        }
+    }
 }
 
 .category-grid {
@@ -92,25 +107,9 @@ a {
     margin-right: auto;
     // background: white;
 
-    img {
-        padding: 10px;
-        opacity: 1;
-        width: calc(100% - 20px);
-        height: 30vh; 
-        flex: 1;
-        resize: contain;
-        border : 50px;
-    }
-
-    p {
-        padding: 30px;
-        font-weight: map-get($map: $font-weights, $key: medium);
-        font-family: 'Source Sans Pro', sans-serif;
-        font-size: 2rem;
-        color : white;
-        position: absolute;
-        top: 30%;
-        left: 25%;
+    @media (max-width: 480px) {
+        padding : 0px;
+        margin-top: 1rem;
     }
 
     .placeItem {
@@ -120,8 +119,43 @@ a {
         border-radius: 10px;
         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
+        @media (max-width: 640px) {
+            background-color: transparent;
+            // margin: 5px;
+        }
+
         img {
+            padding: 10px;
+            opacity: 1;
+            width: calc(100% - 20px);
+            height: 30vh; 
+            flex: 1;
+            // resize: contain;
             border : 50px;
+
+            @media (max-width: 640px) {
+                padding : 0px;
+                width: 100%;
+                height: 20vh; 
+            
+            }
+        }
+
+        p {
+            position: absolute;
+            padding: 1rem;
+            font-weight: map-get($map: $font-weights, $key: medium);
+            font-family: 'Source Sans Pro', sans-serif;
+            font-size: 1.5rem;
+            color : white;
+            top: 30%;
+            left: 25%;
+
+            @media (max-width: 640px) {
+                top: 10%;
+                left: 15%;
+            
+            }
         }
 
         &:hover {
@@ -134,6 +168,8 @@ a {
             }
         } 
     }
+
+
 }
 
 .detail-container {
