--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -23,7 +23,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 480px) {
+    @media (max-width: 640px) {
         width : 95vw;
         margin-left: auto;
         margin-right: auto;
@@ -75,7 +75,7 @@ a {
 .map-container {
     // background : white;
     // padding: 10px;
-    height: 60%;
+    height: 592px;
     max-width: 992px;
     width: calc(100%-20px);
     margin-left : auto;
@@ -83,18 +83,12 @@ a {
     margin-top : 50px;
     display : block;
 
-    @media (max-width: 480px) {
+    @media (max-width: 1024px) {
         width: 90vw;
-        height: 60%;
-        min-height: 450px;
+        height: 60vh;
+        min-height: 384px;
         margin: 5px;
         display : block;
-    }
-
-    #map {
-        @media (max-width: 480px) {
-            padding: 0px;
-        }
     }
 }
 
@@ -108,7 +102,7 @@ a {
     margin-right: auto;
     // background: white;
 
-    @media (max-width: 480px) {
+    @media (max-width: 640px) {
         padding : 0px;
         margin-top: 1rem;
     }
@@ -122,6 +116,7 @@ a {
 
         @media (max-width: 640px) {
             background-color: transparent;
+            box-shadow: none;
             // margin: 5px;
         }
 
@@ -137,7 +132,8 @@ a {
             @media (max-width: 640px) {
                 padding : 0px;
                 width: 100%;
-                height: 20vh; 
+                height: 20vh;
+                border-radius: 10px; 
             
             }
         }
