--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -133,7 +133,8 @@ a {
                 padding : 0px;
                 width: 100%;
                 height: 20vh;
-                border-radius: 10px; 
+                border-radius: 10px;
+                box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); 
             
             }
         }
@@ -143,7 +144,7 @@ a {
             padding: 1rem;
             font-weight: map-get($map: $font-weights, $key: medium);
             font-family: 'Source Sans Pro', sans-serif;
-            font-size: 1.5rem;
+            font-size: calc(15px + 0.8vw);
             color : white;
             top: 30%;
             left: 25%;
@@ -151,7 +152,7 @@ a {
             @media (max-width: 640px) {
                 top: 10%;
                 left: 15%;
-            
+                font-size: 15px;
             }
         }
 
@@ -210,7 +211,10 @@ a {
         margin: 2vw;
         font-size: calc(15px + 0.8vw);
         
-       
+        @media (max-width: 640px) {
+            font-size: 15px;
+        }
+
         i {
             display : inline;
         }
