--- a/src/components/layout/NavbarStyle.scss
+++ b/src/components/layout/NavbarStyle.scss
@@ -66,7 +66,7 @@
     }
 
     .icon-bar {
-      padding: 18px 8px;
+      padding-top: 20px;
       width: 50px;
       height: 60px;
       display: none;
@@ -78,6 +78,10 @@
         color: white;
         background-color: #ffffff;
         height: 2px;
+      }
+
+      .fa-bars:before {
+        padding: 10px;
       }
     }
   }
