Add share icons

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@
 
 html,
 body {
-  background: #fbab9d;
+  background: #fdc5b0;
   //#e7a898; #fbab9d;
   font-weight: map-get($map: $font-weights, $key: bold);
   font-family: 'Source Sans Pro', sans-serif;
