--- a/src/components/pages/Pages.scss
+++ b/src/components/pages/Pages.scss
@@ -15,7 +15,7 @@
 .page-container {
   padding: 50px;
   font-weight: map-get($map: $font-weights, $key: medium);
-  color: whitesmoke;
+  color: 	#02457c;
 
   h1 {
     margin-bottom: 10px;
