--- a/src/components/layout/NavbarStyle.scss
+++ b/src/components/layout/NavbarStyle.scss
@@ -38,7 +38,7 @@
       text-decoration: none;
       font-weight: map-get($map: $font-weights, $key: light);
       font-family: 'Source Sans Pro', sans-serif;
-      color: $text-color;
+      color: 	#02457c;
       font-size: 20px;
       text-transform: uppercase;
       display: block;
@@ -48,7 +48,8 @@
       padding: 0 10px;
 
       &:hover {
-        background-color: $accent-color;
+        color: white;
+        background-color: #d56f75;
       }
     }
 
@@ -106,17 +107,23 @@
         right: 100%;
         flex-direction: column;
         background: #ffffff;
-        width: 30%;
+        width: 100%;
         height: 100%;
         overflow: auto;
         transition: right 0.3s;
 
         a {
+          text-align: center;
           padding: 10px;
           font-size: 16px;
           height: auto;
           line-height: normal;
           color: white;
+
+          &:hover {
+            color: white;
+            background-color: #e9d8c7;
+          }
         }
 
         .close {
@@ -131,7 +138,7 @@
       }
 
       ._Menus-show {
-        background: $primary-color;
+        background: #d56f75;
         left: 0;
       }
     }
