ADD Enter page && Stiky Navbar

--- a/src/components/layout/NavbarStyle.scss
+++ b/src/components/layout/NavbarStyle.scss
@@ -1,6 +1,16 @@
 @import '../../assets/styles/variables';
 
 .nav-container {
+  // position: fixed;
+  // top: 0;
+  // z-index: 1;
+  // position: nsticky; top: 0;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  
   width: 100%;
   height: 80px;
   background-color: white;
