--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -20,11 +20,26 @@
 // Places
 
 .categories-container {
+    margin-top: 10vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    width : 70vw;
+    height : 65vh;
+    max-width: 1100px;
+    max-height: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+
+    @media (max-width: 1280x) {
+        width : 70vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
     @media (max-width: 640px) {
         width : 95vw;
+        height: 80vh;
         margin-left: auto;
         margin-right: auto;
     }
@@ -38,10 +53,22 @@ a {
     position: relative;
     text-align: center;
     text-align: justify;
-    margin: 3vw;
+    margin: 2vw;
     background-color: whitesmoke;
     border-radius: 10px;
+    height: 70%;
+    max-width: 600px;
     // border: solid #00C853;
+
+    @media (min-width: 1024px) {
+        min-width: 380px;
+        min-height: 280px;
+    }
+
+    @media (max-width: 1024px) {
+        height: 90%; 
+        min-height: 180px;
+    }
 
     img {
         padding-top: 10px;
@@ -49,8 +76,12 @@ a {
         padding-right: 10px;
         opacity: 1;
         width: calc(100% - 20px);
-        height: 70%; 
+        height: 80%; 
         border-radius: 20px;
+
+        @media (max-width: 500px) {
+            height: 60%; 
+        }
     }
 
     h1 {
