Fix google map infowindow button

--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -109,16 +109,16 @@ a {
     max-width: 992px;
     width : 80vw;
     height: 60vh;
-    margin-left : auto;
-    margin-right : auto;
+    // margin-left : auto;
+    // margin-right : auto;
     margin-top : 50px;
     display : block;
 
     div {
-        max-height: 592px;
-        max-width: 992px;
-        width : 80vw;
-        height: 60vh;
+        // max-height: 592px;
+        // max-width: 992px;
+        // width : 80vw;
+        // height: 60vh;
         margin-left : auto;
         margin-right : auto;
 
@@ -128,7 +128,7 @@ a {
             min-height: 384px;
             margin: 5px;
             margin-left : auto;
-        margin-right : auto;
+            margin-right : auto;
         }
     }
 
