--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -140,11 +140,17 @@ a {
     border-radius: 0.12em;
     box-sizing: border-box;
     text-align: center;
+    margin: 0px;
 
     &:hover{
         color: white;
-        background-color: #fdc5b0;
+        background-color: yellowgreen;
     }
+}
+
+#infowindow {
+    margin-bottom: 10px;
+    font-size: 1.2em;
 }
 
 .category-grid {
@@ -206,35 +212,51 @@ a {
         }
 
         p {
+            // display: none;
             position: absolute;
             padding: 1rem;
             font-weight: map-get($map: $font-weights, $key: medium);
             font-family: 'Source Sans Pro', sans-serif;
             font-size: calc(15px + 2vw);
             color : white;
-            top: 30%;
-            left: 15%;
+            top: 5%;
+            left: 5%;
+            text-shadow: 1px 1px 2px grey;
 
             @media (max-width: 640px) {
-                top: 10%;
-                left: 15%;
-                font-size: 15px;
+                top: 5%;
+                left: 2%;
+                font-size: 20px;
             }
         }
 
         &:hover {
             img {
-              opacity:  0.5;
+              opacity:  0.3;
             }
 
             p {
+                display: flex;
                 color : black;
             }
         } 
     }
-
-
 }
+
+.event-category-grid {
+    @media (max-width: 500px) {
+        // padding-top: 30px;
+        margin-top: 0px;
+        grid-template-columns: 1fr;
+        max-width: 90vw;
+    }
+}
+
+// .event-name {
+//     @media (max-width: 500px) {
+//         font-size: 30px;
+//     }
+// }
 
 .detail-container {
     display: block;
