Modified url + Deployed on <joa-korea.com> with much LOVE <3 on JUNE 14th 2020

--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -144,7 +144,7 @@ a {
 
     &:hover{
         color: white;
-        background-color: yellowgreen;
+        background-color: rgb(201, 226, 151);
     }
 }
 
