--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -50,6 +50,8 @@ a {
 }
 
 .categoryItem {
+    display: flex;
+    flex-direction: column;
     position: relative;
     text-align: center;
     text-align: justify;
@@ -60,13 +62,15 @@ a {
     max-width: 600px;
     // border: solid #00C853;
 
+
+
     @media (min-width: 1024px) {
         min-width: 380px;
         min-height: 280px;
     }
 
     @media (max-width: 1024px) {
-        height: 90%; 
+        height: 80%; 
         min-height: 180px;
     }
 
@@ -76,7 +80,7 @@ a {
         padding-right: 10px;
         opacity: 1;
         width: calc(100% - 20px);
-        height: 80%; 
+        height: 70%; 
         border-radius: 20px;
 
         @media (max-width: 500px) {
@@ -87,12 +91,10 @@ a {
     h1 {
         text-decoration: none;
         color: black;
-        // position: absolute;
-        // top: -800%;
         text-align: center;
-        vertical-align: middle;
-        line-height: 40px;
-        font-size: 25px; 
+        padding-top: calc(5px + 1vh);
+        padding-bottom: calc(5px + 1vh);
+        font-size: calc(20px + 1vw); 
         font-weight: map-get($map: $font-weights, $key: light);
     }
 }
@@ -180,7 +182,7 @@ a {
 
     .placeItem {
         position: relative;
-        margin: 20px;
+        margin: calc(20px + 2vw);
         background-color: white;
         border-radius: 10px;
         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -188,7 +190,7 @@ a {
         @media (max-width: 640px) {
             background-color: transparent;
             box-shadow: none;
-            // margin: 5px;
+            margin: 10px;
         }
 
         img {
@@ -217,16 +219,23 @@ a {
             padding: 1rem;
             font-weight: map-get($map: $font-weights, $key: medium);
             font-family: 'Source Sans Pro', sans-serif;
-            font-size: calc(15px + 2vw);
+            font-size: calc(20px + 2vh);
             color : white;
             top: 5%;
             left: 5%;
             text-shadow: 1px 1px 2px grey;
 
-            @media (max-width: 640px) {
+
+            @media (max-width: 360px) {
+                top: 1%;
+                left: 2%;
+                font-size: 13px; 
+            }
+
+            @media (min-width: 361px) and (max-width: 640px) {
                 top: 5%;
                 left: 2%;
-                font-size: 20px;
+                font-size: calc(15px + 1vw); 
             }
         }
 
