--- a/src/components/layout/NavbarStyle.scss
+++ b/src/components/layout/NavbarStyle.scss
@@ -98,7 +98,7 @@
   }
 }
 
-@media only screen and (max-width: 650px) {
+@media (max-width: 650px) {
   .nav-container {
     justify-content: space-between;
 
