--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,9 @@ body {
   width: 100%;
   min-height: 100% !important;
   height: 100%;
+  width:100vw;
+  height: 100vh;
+  margin: 0;
 }
 
 .container {
@@ -31,4 +34,5 @@ body {
 
 .nav {
   height: 80px;
+  z-index: 99;
 }
