--- a/src/components/pages/Pages.scss
+++ b/src/components/pages/Pages.scss
@@ -105,42 +105,55 @@
 
 .about-container {
   background-color: white;
-  // padding: 20px 0px;
+  padding: 20px 0px;
   font-weight: map-get($map: $font-weights, $key: medium);
   color: 	black;
   height: calc(100vh - 80px);
   width: 100vw;
-  overflow:hidden;
-  display: block;
 
-  .videoTag {
-    width: 100%;
-    height: 100%;
-    opacity: 0.4;
-    position: absolute; 
-    overflow: hidden;
-    top: -2%;
+  // .videoTag {
+  //   position: fixed;
+  //   right: 0;
+  //   bottom: -100px;
+  //   min-width: 100%;
+  //   min-height: 100%;
+  //   opacity: 0.4;
+    // position:fixed;
+    // z-index: -1;
+    // opacity: 0.4;
+    // width: 100%;
+    // height: auto;
 
-    @media (max-width: 360px) {
-      top: -30vw;
-    }
+    // @media (max-width: 360px) {
+    //   top: -30vw;
+    // }
 
-    @media (min-width: 361px) and (max-width: 640px){
-      top: calc(-5em - 8vh);
-    }
+    // @media (min-width: 361px) and (max-width: 640px){
+    //   top: calc(-5em - 8vh);
+    // }
 
-    @media (min-width: 641px) and (max-width: 1024px){
-      top: -35vw;
-    }
+    // @media (min-width: 641px) and (max-width: 1024px){
+    //   top: -35vw;
+    // }
 
-    @media (min-width: 1025px) and (max-width: 1280px){
-      top: -15vw;
-    }
+    // @media (min-width: 1025px) and (max-width: 1280px){
+    //   top: -15vw;
+    // }
 
-    @media (min-width: 1281px) {
-      top: -1%;
-    }
-  }
+    // @media (min-width: 1281px) {
+    //   top: -1%;
+    // }
+  // }
+
+  // .text {
+  //   position: fixed;
+  //   bottom: 0;
+  //   background: rgba(0, 0, 0, 0.5);
+  //   color: #f1f1f1;
+  //   width: 100%;
+  //   padding: 20px;
+  // }
+
 
   #joa {
     text-align: center;
@@ -156,11 +169,6 @@
       padding-bottom: 20px;
     }
   } 
-
-  h1 {
-    margin-bottom: 10px;
-    justify-content: start;
-  }
 }
 
 #meaning {
