--- a/src/components/Components.scss
+++ b/src/components/Components.scss
@@ -6,7 +6,7 @@
 .event-category-container {
     padding-top: 30px;
     height : 100vh;
-    background : #fbab9d;
+    background : #297575;
 }
 
 .event-category-grid {
@@ -21,27 +21,23 @@
 // Places
 
 .categories-container {
-    margin-top: calc(50px + 2vh);
+    margin-top: calc(50px + 1vh);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width : 70vw;
-    height : 65vh;
-    max-width: 1100px;
-    max-height: 1000px;
+    // width : 70%;
+    height : 80vh;
+    max-width: 620px;
     margin-left: auto;
     margin-right: auto;
-    align-items: center;
 
     @media (max-width: 1280px) {
         width : 70vw;
-        margin-left: auto;
-        margin-right: auto;
     }
 
     @media (max-width: 640px) {
         width : 95vw;
         height: 80vh;
-        margin-top: 20px;
+        margin-top: 30px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -57,23 +53,24 @@ a {
     position: relative;
     text-align: center;
     text-align: justify;
-    margin: 2vw;
+    margin: 0px 1.5vw;
     background-color: whitesmoke;
     border-radius: 10px;
-    height: 70%;
-    max-width: 600px;
+    padding: 0.3vw;
+    height: 90%;
+    // max-width: 600px;
     // border: solid #00C853;
 
-
-
-    @media (min-width: 1024px) {
-        min-width: 380px;
+    @media (min-width: 1025px) {
+        min-width: 250px;
         min-height: 280px;
     }
 
     @media (max-width: 1024px) {
-        height: 80%; 
+        height: 90%; 
         min-height: 180px;
+        margin: 0px 2.5vw;
+        padding: 0px;
     }
 
     img {
@@ -81,12 +78,13 @@ a {
         padding-left: 10px;
         padding-right: 10px;
         opacity: 1;
+        max-width: 251px;
         width: calc(100% - 20px);
-        height: 70%; 
+        height: 80%; 
         border-radius: 20px;
 
-        @media (max-width: 500px) {
-            height: 60%; 
+        @media (max-width: 640px) {
+            height: 70%; 
         }
     }
 
@@ -94,10 +92,14 @@ a {
         text-decoration: none;
         color: black;
         text-align: center;
-        padding-top: calc(10px + 1vh);
+        padding-top: calc(5px + 1.5vh);
         padding-bottom: calc(5px + 1vh);
         font-size: calc(20px + 1vw); 
         font-weight: map-get($map: $font-weights, $key: light);
+       
+        @media (min-width: 1024px) {
+            padding-top: calc(5px + 0.5vh);
+        }
     }
 }
 
@@ -266,7 +268,7 @@ a {
 .detail-container {
     padding-top: calc(10px + 0.5vh);
     padding-bottom: calc(10px + 0.5vh);
-
+    
     h2 {
         padding-top: 15px;
     }
@@ -276,6 +278,8 @@ a {
     }
 
     p {
+        color: black;
+        word-wrap: break-word;
         padding-top: 5px;
         font-weight: map-get($map: $font-weights, $key: light);
     }
@@ -288,6 +292,7 @@ a {
 }
 
 .fas {
+    color: black;
     margin-right: 10px;
 }
 
@@ -296,4 +301,12 @@ a {
         height : 40vh;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
+}
+
+.event-detail {
+    background : #297575;
+}
+
+.event-category-container {
+    color: white;
 }
