--- a/src/components/pages/Pages.scss
+++ b/src/components/pages/Pages.scss
@@ -11,15 +11,15 @@
   // overflow: hidden; 
 
   .title {
-    // position: relative;
-    // top: 10%;
     text-align: center;
     font-weight: map-get($map: $font-weights, $key: medium);
     padding : 0px;
     font-size: 40vw;
 
-    @media (min-width: 1280px) {
+    @media (min-width: 1100px) {
       font-size: 26em;
+      position: relative;
+      top: -5%;
     }
 
     @media (max-width: 640px) {
@@ -30,10 +30,17 @@
     }
   }
 
+ .button {
+  @media (min-width: 1100px) {
+    position: relative;
+    top: -5%;
+  }
+ }
+
   a.button1 {
+    position: relative;
+    top: -10%;
     margin: 0 auto;
-    margin-top: calc(50px + 2vh);
-    margin-bottom: 5vh;
     width: 110px;
     display: block;
     padding: 0.35em 0.5em;
@@ -60,10 +67,13 @@
     @media all and (max-width:30em) {
        display: block;
        margin: 0.4em auto;
+      position: relative;
+      top: -5%;
     }
 
     @media (min-width: 1280px) {
-      margin-top: calc(35px);
+      position: relative;
+      top: -20%;
     }
   }
 }
@@ -172,6 +182,8 @@
 }
 
 #meaning {
+  position: relative;
+  top: -5%;
   font-size: calc(15px + 2vw);
   text-align: center;
   font-weight: map-get($map: $font-weights, $key: medium);
@@ -179,4 +191,13 @@
   @media (max-width: 640px) {
     padding: 0px 20px;
   }
+
+  @media (min-width: 1100px) {
+    position: relative;
+    top: -10%;
+  }
+}
+
+#center {
+  text-align: center;
 }
